2010-02-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Add [MonoTODO] to CheckAndDownloadUpdateAsync.
	Do not use EntryPointAssembly DP inside GetResourceStream since
	it can be called outside the main thread.

2010-02-03  Andreia Gaita  <avidigal@novell.com>

	* DependencyProperty.g.cs, Events.g.cs: remove autogenerated files from
	the repo

2010-02-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Duration.cs: Automatic is the default kind.

2010-01-25  Alan McGovern  <amcgovern@novell.com>

	* CheckAndDownloadUpdateCompletedEventArgs.cs: Implement the
	  missing properties for
	  CheckAndDownloadUpdateCompleteEventArgs.

2010-01-21  Alan McGovern  <amcgovern@novell.com>

	* PresentationFrameworkCollection.cs: The hack to emit an
	  Added and Removed event when replacing an item can be
	  removed now that Silverlight has fixed their bug.

2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Events.g.cs: Regenerated.

2010-01-14  Alan McGovern  <amcgovern@novell.com>

	* DependencyProperty.g.cs: Get rid of some of the bonus API
	  points we've accumulated.

2010-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Set the default HTTP[S] stack as the browser

2010-01-12  Alan McGovern  <amcgovern@novell.com>

	* FrameworkElement.cs: Implement support for explicitly
	  updated two way bindings and add tests to cover that.

2009-01-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DependencyObject.g.cs: Regenerated
	* DependencyProperty.g.cs: Regenerated

2009-12-31  Sebastien Pouliot  <sebastien@ximian.com>

	* CustomDependencyProperty.cs: Seal internal type (gendarme)

2009-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Cache the resources data coming from the XAP 
	itself so we can avoid using FileStream (and "Too many open 
	files" exceptions).

2009-12-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Application.cs: Add a dropref parameter to the ctor, just as every