@@ -1,3 +1,8 @@
+2010-02-06  Chris Toshok  <toshok@ximian.com>
+
+	* Deployment.cs (InitializeDeployment): set the appdomain's
+	ApplicationBase to the xap directory so Assembly.Load works.
+
 2010-02-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Application.cs: Add [MonoTODO] to CheckAndDownloadUpdateAsync.
